packages/typ/tests/fixtures/diagnostics/0480_modules_local_module_signature_mismatch_06.ml
let _ =
  let module Local_zeta : sig
    val x : bool
  end = struct
    let x = 5
  end in
  Local_zeta.x
